[gd_scene load_steps=4 format=3 uid="uid://c2gyfogrndnrc"]

[ext_resource type="Script" path="res://scenes/enemies/static_enemy.gd" id="1_p8hds"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3dtl"]
size = Vector2(14, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_jk8ah"]
animations = []

[node name="Static Enemy" type="Area2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_p8hds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_l3dtl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jk8ah")
animation = &""
autoplay = "default"
frame_progress = 0.76982
flip_h = true

[node name="Damage_timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Damage_timer" to="." method="_on_damage_timer_timeout"]
